--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<html>
+   <title>
+     First website
+  </title>
+  <body>
+    <h1>This is my first Github Page</h1>
+  </body>
+  <style>
+    body {
+      background-color:green;
+      color:#fff;
+      test-align:center;
+    }
+  </style>
+</html>
