--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
      First website
   </title>
   <body>
-    <h1>This is my first Github Page</h1>
+    <h1>Please enter credit card detail? uwu</h1>
   </body>
   <style>
     body {
-      background-color:green;
+      background-color:pink;
       color:#fff;
       test-align:center;
     }
