--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      First website
   </title>
   <body>
-    <h1>Please enter credit card detail? uwu</h1>
+    <h1 style="text-align:center;">Hello this is my website</h1>
   </body>
   <style>
     body {
