--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </title>
   <body>
     <h1 style="text-align:center;">Hello this is my website</h1>
+     <img src="small-profile.jpeg">
   </body>
   <style>
     body {
