--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <html>
+   <img src="small-profile.jpeg">
    <title>
      First website 
       <img src="small-profile.jpeg">
   </title>
   <body>
     <h1 style="text-align:center;">Hello this is my website</h1>
+     <img src="small-profile.jpeg">
   </body>
   <style> 
     body {
       background-color:pink;
       color:#fff;
       test-align:center;
+       <img src="small-profile.jpeg">
     }
   </style>
 </html>
