--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <html>
-   <img src="https://html.sammy-codes.com/images/small-profile.jpeg">
    <title>
-     First website 
-      <img src="https://html.sammy-codes.com/images/small-profile.jpeg">
+     First website hello
   </title>
   <body>
     <h1 style="text-align:center;">Hello this is my website</h1>
-     <img src="https://html.sammy-codes.com/images/small-profile.jpeg">
   </body>
-  <style>
-  </style>
 </html>
