--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <button>Hello</button>
 <p>paragraph of text</p>
-<a href="https://www.youtube.com/watch?v=vZa0Yh6e7dw">Link to Guts Soundtrack</a>
+<a href="https://www.youtube.com/watch?v=vZa0Yh6e7dw" target="_blank">Link to Guts Soundtrack</a>
