--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
-<button>Hello</button>
-<p>paragraph of text</p>
-<a href="https://www.youtube.com/watch?v=vZa0Yh6e7dw" target="_blank">Link to Guts oundtrack</a>
+<button>
+  Peanut Butter
+</button>
+
+<p>
+  Hello, World!
+</p>
+
+<p>
+  I made a protein powder shake today!
+</p>
+
+<a href="https://www.youtube.com/watch?v=vZa0Yh6e7dw" target="_blank">
+  Link to Guts Soundtrack
+</a>
+
+
+  
